Setup with macOS, JavaFX12 and intelliJ